--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
     text-align: center;
     width: 100%;
-    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,11 +8,10 @@
 
 .logIn {
     display: flex;
-    flex-direction: column;
     width: 500px;
     align-items: center;
-    justify-content: space-around;
-    height: 300px;
+    justify-content: center;
+    height: 100vh;
 }
 
 .main {
@@ -22,23 +20,33 @@
     width: 100%;
     height: 100vh;
 }
-.header{
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #1c0a41;
-    width: 100%;
-    height: 70px;
+
+.headerBox {
+    height: 10%;
 }
 
-.headerName{
+.header {
+    position: fixed;
+    background-color: #1c0a41;
+    width: 80%;
+    height: 10%;
+}
+
+.headerContainer {
+    margin: 10px auto;
+    display: flex;
+    justify-content: space-between;
+
+    max-width: 700px;
+}
+
+.headerName {
     justify-self: start;
     color: #ffffff;
 
 }
 
-.modalHeader{
+.modalHeader {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -51,18 +59,23 @@
 
 .noUser {
     background-color: #15253d;
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.noUser h2{
+.error {
+    color: red;
+    align-self: end;
+}
+
+.noUser h2 {
     width: 300px;
     height: 40px;
 }
 
-.item{
+.item {
     cursor: pointer;
     padding: 5px;
     width: 200px;
@@ -72,8 +85,6 @@
 }
 
 .dialogs {
-    /*padding: 70px 0 0 0;*/
-    /*margin: 70px 0 0 0;*/
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -82,7 +93,7 @@
     overflow: auto;
 }
 
-.message{
+.message {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -92,25 +103,27 @@
     padding: 10px;
     margin: 30px;
 }
-.ms{
+
+.ms {
     min-height: 30px;
 }
 
-.msHeader{
+.msHeader {
     display: flex;
     justify-content: space-between;
 }
 
-.data{
+.data {
     align-self: end;
 }
 
-.topic{
+.topic {
     align-self: start;
     display: flex;
 }
 
-.imgC img{
+.imgC img {
+    cursor: pointer;
     width: 15px;
     height: 15px;
     margin: 5px 0 0 4px;
@@ -118,8 +131,9 @@
 
 .listUsers {
     background-color: #282c34;
-    width: 400px;
+    width: 30%;
     overflow: auto;
+    height: 100vh;
 }
 
 .App-logo {
